updated resume and fixed stretching flex item issue in projects

--- a/projects/css/style.css
+++ b/projects/css/style.css
@@ -19,6 +19,7 @@ section{
     padding-top:20px;
     display:flex;
     justify-content: center;
+    align-content: flex-start;
 }
 
 section > *{
